--- a/client/src/styles/PokemonPage.css
+++ b/client/src/styles/PokemonPage.css
@@ -9,19 +9,32 @@
   box-sizing: border-box;
 }
 
-.pokemon-container .content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.pokemon-container .pokemon-list {
+.pokemon-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-.pokemon-container .pokemon-card {
+.pokemon-card-favorite-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: #C0C0C0 !important;
+  border: 2px solid #2a3439;
+  cursor: pointer;
+  font-size: 1.5em;
+  padding: 8px;
+  border-radius: 50%;
+  color: #000000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 1;
+  box-shadow: 0 4px 8px rgba(88, 88, 88, 0.5);
+  transition: transform 0.2s ease;
+}
+
+.pokemon-card {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -37,27 +50,39 @@
   z-index: 1;
 }
 
-.pokemon-container .pokemon-card img {
+.pokemon-card img {
   width: 100px;
   height: 100px;
   margin-bottom: 1px;
 }
 
-.pokemon-container .pokemon-name {
+.pokemon-name {
   background-color: #eee;
   border-radius: 20px;
   padding: 5px 10px;
-  margin-top: 5px;
+  margin-top: -50px;
   font-size: 1em;
   color: #333;
 }
 
-.pokemon-container .pokemon-types {
+.pokemon-types {
   opacity: 0;
+  flex-direction: column;
+  gap: 5px;
+  position: absolute;
+  top: 40%;
+  transform: translateY(-50%);
+}
+
+.pokemon-type {
+  padding: 2px 8px;
+  border-radius: 20px;
+  font-size: 1em;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .pokemon-container .pokemon-card:hover .pokemon-types {
-  background-color: rgba(0, 0, 0, 0.1);
   opacity: 0.8;
 }
 
