--- a/client/src/styles/PokemonDetail.module.css
+++ b/client/src/styles/PokemonDetail.module.css
@@ -40,10 +40,11 @@
   top: 10px;
   right: 10px;
   background-color: #C0C0C0;
-  border: 2px outset #2a3439;
+  border: 2px inset #2a3439;
   cursor: pointer;
   font-size: 1.5em;
-  padding: 8px;
+  padding: 4px 8px 0px 8px; /* top, right, bottom, left */
+  padding-bottom: 2px;
   border-radius: 50%;
   color: #000000;
   display: flex;
@@ -52,6 +53,13 @@
   line-height: 1;
   box-shadow: 0 4px 8px rgba(88, 88, 88, 0.5);
   transition: transform 0.2s ease;
+}
+
+.favoriteButton.favorited {
+  font-size: 1.2em;
+  padding: 6px 5px 6px 5px; /* top, right, bottom, left */
+  padding-bottom: 6px;
+  border: 2px outset #2a3439;
 }
 
 .favoriteButton:hover {
@@ -76,7 +84,7 @@
   background-color: #C0C0C0 !important;
   border: 2px outset #2a3439;
   border-radius: 10px;
-  padding: 0px 8px;
+  padding: 0px 8px 0px 6px; /* top, right, bottom, left */
   color: #333;
   font-size: 1.5em;
   cursor: pointer;
@@ -196,6 +204,7 @@
   border-radius: 10px;
   border: 2px inset #2a3439;
   padding: 10px;
+  padding-bottom: 2px;
   display: flex;
   flex-direction: column;
   align-items: center;
