--- a/client/src/styles/PreviewPage.module.css
+++ b/client/src/styles/PreviewPage.module.css
@@ -33,15 +33,22 @@
   top: 10px;
   right: 10px;
   background-color: #C0C0C0;
-  border: 2px outset #2a3439;
+  border: 2px inset #2a3439;
   cursor: pointer;
-  font-size: 1.2em;
-  padding: 0.5px 2px;
+  font-size: 1.4em;
+  padding: 2px 3px 0px 3px; /* top, right, bottom, left */
   border-radius: 20%;
   display: flex;
   align-items: center;
   justify-content: center;
   line-height: 1;
+}
+
+.previewFavoriteButton.active {
+  position: absolute;
+  border: 2px outset #2a3439;
+  padding: 3px 1px 3px 2px; /* top, right, bottom, left */
+  font-size: 1em;
 }
 
 .previewFavoriteButton:hover {
