update tab colors

--- a/client/src/styles/BaseLayout.css
+++ b/client/src/styles/BaseLayout.css
@@ -104,6 +104,7 @@
   outline: 2px inset #000;
   border: none;
   margin: 0 10px;
+  color: #000;
 }
 
 .tab.active {
@@ -111,6 +112,7 @@
   outline: 3px outset #000;
   font-size: 14px;
   font-weight: bold;
+  color: #000;
 }
 
 input:disabled, button:disabled {
