--- a/client/src/styles/PreviewPage.module.css
+++ b/client/src/styles/PreviewPage.module.css
@@ -65,17 +65,17 @@
   border: 2px outset #2a3439;
   border-radius: 15px;
   text-align: center;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  width: 125px;
-  height: 140px;
-  transition: background-color 0.3s, opacity 0.3s;
+  width: 127px;
+  height: fit-content;
   z-index: 1;
+  box-sizing: border-box;
 }
 
 .previewCard img {
   width: 100px;
   height: 100px;
-  margin-bottom: 1px;
+  margin-top: auto;
+  margin-bottom: auto;
   padding-top: 20px;
 }
 
@@ -84,7 +84,8 @@
   border: 2px outset #2a3439;
   border-radius: 20px;
   padding: 5px 10px;
-  margin-top: -3px;
+  margin-top: 0px;
+  margin-bottom: -18px;
   font-size: 1em;
   font-weight: 500;
   color: #333;
