--- a/client/src/styles/PreviewPage.module.css
+++ b/client/src/styles/PreviewPage.module.css
@@ -36,6 +36,7 @@
   border: 2px inset #2a3439;
   cursor: pointer;
   font-size: 1.4em;
+  height: 26px;
   padding: 2px 3px 0px 3px; /* top, right, bottom, left */
   border-radius: 20%;
   display: flex;
@@ -47,7 +48,7 @@
 .previewFavoriteButton.active {
   position: absolute;
   border: 2px outset #2a3439;
-  padding: 3px 1px 3px 2px; /* top, right, bottom, left */
+  padding: 2px 0px 2px 1px; /* top, right, bottom, left */
   font-size: 1em;
 }
 
