--- a/client/src/styles/PreviewPage.module.css
+++ b/client/src/styles/PreviewPage.module.css
@@ -94,10 +94,12 @@
 
 .previewTypes {
   opacity: 0;
+  display: flex;
   flex-direction: column;
   gap: 5px;
   position: absolute;
-  top: 40%;
+  top: 50%;
+  transition: opacity 0.3s ease;
   transform: translateY(-50%);
 }
 
@@ -105,12 +107,14 @@
   padding: 2px 8px;
   border-radius: 20px;
   font-size: 1em;
+  font-weight: 500;
   text-align: center;
-  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px outset #2a3439;
+  color: #ffffff;
 }
 
 .previewContainer .previewCard:hover .previewTypes {
-  opacity: 0.8;
+  opacity: 1;
 }
 
 /* Background styling for different Pokémon types */
