--- a/client/src/styles/DetailedPage.module.css
+++ b/client/src/styles/DetailedPage.module.css
@@ -1,6 +1,6 @@
 /* client/src/components/PokemonDetail.css */
 
-.pokemonDetail {
+.detailContainer {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -22,7 +22,7 @@
   border: 8px solid #C0C0C0;
 }
 
-.pokemonId {
+.detailId {
   position: absolute;
   border: 2px outset #2a3439;
   top: 10px;
@@ -66,7 +66,7 @@
   transform: scale(1.1);
 }
 
-.pokemonName {
+.detailName {
   background-color: #C0C0C0;
   border: 2px inset #2a3439;
   border-radius: 20px;
@@ -119,10 +119,11 @@
   background-color: #388e3c;
 }
 
-.pokemonImage {
+.detailImage {
   background-color: #c9c9c9;
   border-radius: 10px;
   border: 2px inset #2a3439;
+  /* max-width: 100%; */
   width: 175px;
   height: auto;
   margin-top: 14px;
