--- a/client/src/styles/PreviewPage.module.css
+++ b/client/src/styles/PreviewPage.module.css
@@ -1,3 +1,25 @@
+.categoryButtons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+
+.categoryButton {
+  background-color: blue;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+  white-space: nowrap;
+}
+
+.categoryButton.active, .categoryButton:hover {
+  background-color: darkblue;
+}
+
 .previewContainer {
   text-align: center;
   padding: 20px;
@@ -18,8 +40,8 @@
 .previewId {
   position: absolute;
   border: 2px outset #2a3439;
-  top: 10px;
-  left: 10px;
+  top: 7px;
+  left: 7px;
   background-color: #C0C0C0;
   border-radius: 5px;
   padding: 2px 5px;
@@ -30,8 +52,8 @@
 
 .previewFavoriteButton {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 7px;
+  right: 7px;
   background-color: #C0C0C0;
   border: 2px inset #2a3439;
   cursor: pointer;
