--- a/client/src/styles/BaseLayout.css
+++ b/client/src/styles/BaseLayout.css
@@ -143,3 +143,14 @@ input:disabled, button:disabled {
 .favorite-button:hover {
   background-color: darkgreen;
 }
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
